--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
