--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.9",
     "heic2any": "^0.0.4",
     "lodash": "^4.17.21",
+    "nanoid": "^5.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.3",
