--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-loader-spinner": "^6.1.6",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "recharts": "^3.2.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
